--- a/pom.xml
+++ b/pom.xml
@@ -125,9 +125,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.camunda.bpm.extension</groupId>
-      <artifactId>camunda-bpm-process-test-coverage-junit5</artifactId>
-      <version>1.0.3</version>
+      <groupId>org.camunda.community.process_test_coverage</groupId>
+      <artifactId>camunda-process-test-coverage-junit5-platform-7</artifactId>
+      <version>2.0.0</version>
+      <scope>test</scope>
+   </dependency>
+    <dependency>
+      <groupId>org.camunda.bpm</groupId>
+      <artifactId>camunda-bpm-junit5</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
