--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-4
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/amven..00.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -12,7 +12,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-    <camunda.version>7.20.0-ee</camunda.version>
+    <camunda.version>7.21.5-ee</camunda.version>
   </properties>
 
   <repositories>
@@ -45,7 +45,7 @@
 
   <dependencies>
 
-    <!-- Camunda 7 engine via Spring Boot Starter -->
+    <!-- Camunda 7 Engine via Spring Boot Starter -->
     <dependency>
       <groupId>org.camunda.bpm.springboot</groupId>
       <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
@@ -121,19 +121,19 @@
     <dependency>
       <groupId>org.camunda.bpm.assert</groupId>
       <artifactId>camunda-bpm-assert</artifactId>
-      <version>12.0.0</version>
+      <version>15.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.19.0</version>
+      <version>3.24.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.camunda.community.process_test_coverage</groupId>
       <artifactId>camunda-process-test-coverage-junit5-platform-7</artifactId>
-      <version>2.3.1</version>
+      <version>2.4.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -143,7 +143,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>3.3.1</version>
       </plugin>
     </plugins>
   </build>
